# fertilityshare

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  codereviewworkflow.md  docker-entrypoint.sh  nixpacks.toml  prd.md  pyproject.toml  railway.json  sonar-project.properties
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml  quality.yml
alembic/: env.py
alembic/versions/: 20250309_v1_initial.py  20250311_v2_progressive_delivery.py
data/rag/: .gitkeep  README.md
docs/: CI.md  PRODUCTION-ENV.md  RAG-SETUP.md  Syllabus_PRD_Addendum_v2.1_Pipeline_Enhancement.docx.md  V0_EVAL.md  github-reviews.md
syllabus/: __init__.py  __main__.py
syllabus/api/: __init__.py  auth.py  deps.py  job_store.py  main.py  rate_limit.py
syllabus/api/routes/: auth.py  course.py  generate.py
syllabus/cli/: __init__.py  main.py
syllabus/db/: __init__.py  database.py  models.py
syllabus/eval/: __init__.py  rubric.py
syllabus/models/: __init__.py  schemas.py
syllabus/pipeline/: __init__.py  content.py  graph.py  intent.py  outline.py  prompts.py  qa.py  research.py  state.py
syllabus/rag/: __init__.py  index.py  pubmed.py  store.py
syllabus/tests/: __init__.py  prompts_v0.txt  test_api_routes.py  test_content.py  test_eval_rubric.py  test_intent.py  test_outline.py  test_pipeline_integration.py  test_qa.py  test_rag_pubmed.py  test_rate_limit.py  test_research.py
syllabus/tests/fixtures/: v0_prompts.json
web/: next.config.js  package-lock.json  package.json  playwright.config.ts
web/app/: error.tsx  global-error.tsx  layout.tsx  page.tsx
web/app/auth/: context.tsx  nav.tsx
web/e2e/: intake-to-course.spec.ts
(+6 files in other folders)
